# Another-Kawaii-Chip-8-Emulator

./: .gitignore  meson.build  readme.md
include/: Common.h  Emulator.h  Input.h  Log.h  Renderer.h  Speaker.h
shaders/: emulatedScreen.frag  emulatedScreen.vert  screen.frag  screen.vert
src/: Common.cpp  Emulator.cpp  Input.cpp  Log.cpp  Renderer.cpp  Speaker.cpp  main.cpp
